[package]
name = "twitter_stream"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0.40"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dialoguer = "0.8.0"
jsonl = "4.0.1"
console = "0.14.1"
futures = "0.3.15"
thiserror = "1.0.24"
